--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,27 @@
     <h2>категории</h2>
     <ul>
         <li><a href="pages/articles.html">статьи</a></li>
-        <li><a href="pages/tests.html">тесты</a></li>
-        <li><a href="pages/dictionary.html">словарь</a></li>
+        <li><a href="pages/archive.html">архив</a></li>
+        <li><a href="pages/interact.html">интерактивная зона</a></li>
+        <li><a href="pages/about.html">о нас</a></li>
     </ul>
 
     <h3>статьи</h3>
-    <a href="pages/articles/plants.html">статья 1</a>
+    <a href="pages/articles/art1.html">статья 1</a> <br>
+    <a href="pages/articles/art2.html">статья 2</a>
 
-    <h3>тесты</h3>
-    <a href="pages/tests/test1.html">тест1 1</a>
+    <h3>архив</h3>
+     <ul>
+        <li><a href="pages/archive/random.html">рандомная страница</a></li>
+        <li><a href="pages/archive/websites.html">сайты</a></li>
+        <li><a href="pages/archive/memes.html">челленджи, мемы</a></li>
+        <li><a href="pages/archive/hacks.html">взломы</a></li>
+    </ul>
+
+    <h3>интерактивная зона</h3>
+     <ul>
+        <li><a href="pages/interact/games.html">игры</a></li>
+        <li><a href="pages/interact/tests.html">тесты</a></li>
+    </ul>
 </body>
 </html>
