--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>статья 1</title>
+    <title>о нас</title>
 </head>
 <body>
-    <a href="../../index.html">на главную</a> 
-    <a href="../articles.html">к статьям</a>
-    <h1>статья 1</h1>
+    <a href="../index.html">на главную</a>
 </body>
 </html>
