--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -8,6 +8,7 @@
 <body>
   <a href="../index.html">на главную</a>
   <h1>статьи</h1>
-  <a href="./articles/plants.html">статья 1</a>  
+  <a href="./articles/art1.html">статья 1</a>  <br>
+  <a href="./articles/art2.html">статья 2</a>
 </body>
 </html>
