--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>главная</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>главная</h1>
 
     <h2>категории</h2>
     <ul>
-        <li><a href="pages/articles.html">статьи</a></li>
-        <li><a href="pages/archive.html">архив</a></li>
-        <li><a href="pages/interact.html">интерактивная зона</a></li>
-        <li><a href="pages/about.html">о нас</a></li>
+      <li><a href="pages/articles.html">статьи</a></li>
+      <li><a href="pages/archive.html">архив</a></li>
+      <li><a href="pages/interact.html">интерактивная зона</a></li>
+      <li><a href="pages/about.html">о нас</a></li>
     </ul>
 
     <h3>статьи</h3>
-    <a href="pages/articles/art1.html">статья 1</a> <br>
+    <a href="pages/articles/art1.html">статья 1</a> <br />
     <a href="pages/articles/art2.html">статья 2</a>
 
     <h3>архив</h3>
-     <ul>
-        <li><a href="pages/archive/random.html">рандомная страница</a></li>
-        <li><a href="pages/archive/websites.html">сайты</a></li>
-        <li><a href="pages/archive/memes.html">челленджи, мемы</a></li>
-        <li><a href="pages/archive/hacks.html">взломы</a></li>
+    <ul>
+      <li><a href="pages/archive/random.html">рандомная dikii страница</a></li>
+      <li><a href="pages/archive/websites.html">сайты</a></li>
+      <li><a href="pages/archive/memes.html">челленджи, мемы</a></li>
+      <li><a href="pages/archive/hacks.html">взломы</a></li>
     </ul>
 
     <h3>интерактивная зона</h3>
-     <ul>
-        <li><a href="pages/interact/games.html">игры</a></li>
-        <li><a href="pages/interact/tests.html">тесты</a></li>
+    <ul>
+      <li><a href="pages/interact/games.html">игры</a></li>
+      <li><a href="pages/interact/tests.html">тесты</a></li>
     </ul>
-</body>
+  </body>
 </html>
