--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
     <h3>архив</h3>
     <ul>
-      <li><a href="pages/archive/random.html">рандомная dikii страница</a></li>
+      <li><a href="pages/archive/random.html">рандомная diki страница</a></li>
       <li><a href="pages/archive/websites.html">сайты</a></li>
       <li><a href="pages/archive/memes.html">челленджи, мемы</a></li>
       <li><a href="pages/archive/hacks.html">взломы</a></li>
