--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,73 @@
     <title>главная</title>
   </head>
   <body>
+    <div class="zaglushka">
+      <div class="text">
+        <div class="text_wrapper">
+          <h1 class="name_1">стэш</h1>
+          <h1 class="name_2">архив старого интернета</h1>
+
+          <p>
+            вспомним всё, что ты хотел запомнить, и всё, что ты хотел забыть
+          </p>
+          <form
+            id="my-form"
+            action="https://formspree.io/f/mldpkdbz"
+            method="POST"
+          >
+            <!-- <label>Email:</label> -->
+            <!-- <input type="email" name="email" /> -->
+            <!-- <label>Message:</label>-->
+            <input type="text" name="message" placeholder="ваш телеграм" />
+            <button id="my-form-button">отправить</button>
+            <p id="my-form-status"></p>
+          </form>
+        </div>
+      </div>
+      <div class="image">
+        <img src="images/mac.png" alt="cloude" class="cloude" />
+      </div>
+    </div>
+
+    <!-- Place this script at the end of the body tag -->
+    <script>
+      var form = document.getElementById('my-form')
+
+      async function handleSubmit(event) {
+        event.preventDefault()
+        var status = document.getElementById('my-form-status')
+        var data = new FormData(event.target)
+        fetch(event.target.action, {
+          method: form.method,
+          body: data,
+          headers: {
+            Accept: 'application/json'
+          }
+        })
+          .then((response) => {
+            if (response.ok) {
+              status.innerHTML = 'спасибо, оставайтесь с нами=)'
+              form.reset()
+            } else {
+              response.json().then((data) => {
+                if (Object.hasOwn(data, 'errors')) {
+                  status.innerHTML = data['errors']
+                    .map((error) => error['message'])
+                    .join(', ')
+                } else {
+                  status.innerHTML =
+                    'Упс.. Что-то пошло не так. Попробуйте еще раз=)'
+                }
+              })
+            }
+          })
+          .catch((error) => {
+            status.innerHTML = 'Упс.. Что-то пошло не так. Попробуйте еще раз=)'
+          })
+      }
+      form.addEventListener('submit', handleSubmit)
+    </script>
+    <!-- <div class="routing">
     <h1>главная</h1>
 
     <h2>категории</h2>
@@ -33,5 +100,7 @@
       <li><a href="pages/interact/games.html">игры</a></li>
       <li><a href="pages/interact/tests.html">тесты</a></li>
     </ul>
+
+    </div> -->
   </body>
 </html>
