--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="image">
-        <img src="images/mac.png" alt="cloude" class="cloude" />
+        <img src="./images/лимон4 1.svg" alt="cloude" class="lemon" />
       </div>
     </div>
 
