--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./stylesheets/style.css">
     <title>главная</title>
   </head>
   <body>
@@ -10,11 +11,12 @@
       <div class="text">
         <div class="text_wrapper">
           <h1 class="name_1">стэш</h1>
-          <h1 class="name_2">архив старого интернета</h1>
+          <h2 class="name_2">архив старого интернета</h1>
 
           <p>
-            вспомним всё, что ты хотел запомнить, и всё, что ты хотел забыть
+            вспомним всё, что ты хотел запомнить и всё, что ты хотел забыть
           </p>
+
           <form
             id="my-form"
             action="https://formspree.io/f/mldpkdbz"
@@ -23,14 +25,20 @@
             <!-- <label>Email:</label> -->
             <!-- <input type="email" name="email" /> -->
             <!-- <label>Message:</label>-->
-            <input type="text" name="message" placeholder="ваш телеграм" />
+            <input type="text" name="message" placeholder="tg user" />
             <button id="my-form-button">отправить</button>
             <p id="my-form-status"></p>
           </form>
         </div>
       </div>
       <div class="image">
-        <img src="./images/лимон4 1.svg" alt="cloude" class="lemon" />
+        <img src="./images/lemon_zagl.svg" alt="lemon" class="lemon" />
+      </div>
+      <div class="clouds">
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-1">
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-2">
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-3">
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-4">
       </div>
     </div>
 
