--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,17 @@
         <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-3">
         <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-4">
       </div>
+      <div class="socials">
+        <a href="https://vk.com/archive_stash?from=groups" target="_blank">
+          <img src="./images/vk_icon.svg" alt="inst">
+        </a>
+        <a href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw==" target="_blank">
+          <img src="./images/inst_icon.svg" alt="inst">
+        </a>
+        <a href="https://t.me/oldweb_core" target="_blank">
+          <img src="./images/tg_icon.svg" alt="inst">
+        </a>
+      </div>
     </div>
 
     <!-- Place this script at the end of the body tag -->
