--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./stylesheets/style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css" />
     <title>главная</title>
   </head>
   <body>
@@ -11,11 +11,9 @@
       <div class="text">
         <div class="text_wrapper">
           <h1 class="name_1">стэш</h1>
-          <h2 class="name_2">архив старого интернета</h1>
+          <h2 class="name_2">архив старого интернета</h2>
 
-          <p>
-            вспомним всё, что ты хотел запомнить и всё, что ты хотел забыть
-          </p>
+          <p>вспомним всё, что ты хотел запомнить и всё, что ты хотел забыть</p>
 
           <form
             id="my-form"
@@ -35,20 +33,23 @@
         <img src="./images/lemon_zagl.svg" alt="lemon" class="lemon" />
       </div>
       <div class="clouds">
-        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-1">
-        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-2">
-        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-3">
-        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-4">
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-1" />
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-2" />
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-3" />
+        <img src="./images/cloud_zagl.svg" alt="cloud" class="cloud-4" />
       </div>
       <div class="socials">
         <a href="https://vk.com/archive_stash?from=groups" target="_blank">
-          <img src="./images/vk_icon.svg" alt="inst">
+          <img src="./images/vk_icon.svg" alt="inst" />
         </a>
-        <a href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw==" target="_blank">
-          <img src="./images/inst_icon.svg" alt="inst">
+        <a
+          href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw=="
+          target="_blank"
+        >
+          <img src="./images/inst_icon.svg" alt="inst" />
         </a>
         <a href="https://t.me/oldweb_core" target="_blank">
-          <img src="./images/tg_icon.svg" alt="inst">
+          <img src="./images/tg_icon.svg" alt="inst" />
         </a>
       </div>
     </div>
