--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
           <h1 class="name_1">стэш</h1>
           <h2 class="name_2">архив старого интернета</h2>
 
-          <p>вспомним всё, что ты хотел запомнить и всё, что ты хотел забыть</p>
+          <h3>
+            вспомним всё, что ты хотел запомнить и всё, что ты хотел забыть
+          </h3>
 
           <form
             id="my-form"
@@ -40,16 +42,16 @@
       </div>
       <div class="socials">
         <a href="https://vk.com/archive_stash?from=groups" target="_blank">
-          <img src="./images/vk_icon.svg" alt="inst" />
+          <img src="./images/vk_icon.svg" alt="vk" class="vk" />
         </a>
         <a
           href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw=="
           target="_blank"
         >
-          <img src="./images/inst_icon.svg" alt="inst" />
+          <img src="./images/inst_icon.svg" alt="inst" class="inst" />
         </a>
         <a href="https://t.me/oldweb_core" target="_blank">
-          <img src="./images/tg_icon.svg" alt="inst" />
+          <img src="./images/tg_icon.svg" alt="tgg" class="tgg" />
         </a>
       </div>
     </div>
