--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>главная</title>
   </head>
   <body>
+    <a href="pages/main.html">о медиа</a>
+
     <div class="zaglushka">
       <div class="text">
         <div class="text_wrapper">
@@ -94,35 +96,35 @@
       }
       form.addEventListener('submit', handleSubmit)
     </script>
-    <!-- <div class="routing">
-    <h1>главная</h1>
+    <!-- <div class="routing" id="routing">
+      <h1>главная</h1>
 
-    <h2>категории</h2>
-    <ul>
-      <li><a href="pages/articles.html">статьи</a></li>
-      <li><a href="pages/archive.html">архив</a></li>
-      <li><a href="pages/interact.html">интерактивная зона</a></li>
-      <li><a href="pages/about.html">о нас</a></li>
-    </ul>
+      <h2>категории</h2>
+      <ul>
+        <li><a href="pages/main.html">о медиа</a></li>
+        <li><a href="pages/articles.html">статьи</a></li>
+        <li><a href="pages/archive.html">архив</a></li>
+        <li><a href="pages/interact.html">интерактив</a></li>
+        <li><a href="pages/about.html">о нас</a></li>
+      </ul>
 
-    <h3>статьи</h3>
-    <a href="pages/articles/art1.html">статья 1</a> <br />
-    <a href="pages/articles/art2.html">статья 2</a>
+      <h3>статьи</h3>
+      <a href="pages/articles/art1.html">статья 1</a> <br />
+      <a href="pages/articles/art2.html">статья 2</a> -->
 
-    <h3>архив</h3>
-    <ul>
-      <li><a href="pages/archive/random.html">рандомная diki страница</a></li>
-      <li><a href="pages/archive/websites.html">сайты</a></li>
-      <li><a href="pages/archive/memes.html">челленджи, мемы</a></li>
-      <li><a href="pages/archive/hacks.html">взломы</a></li>
-    </ul>
+    <!-- <h3>архив</h3>
+      <ul>
+        <li><a href="pages/archive/random.html">рандомная diki страница</a></li>
+        <li><a href="pages/archive/websites.html">сайты</a></li>
+        <li><a href="pages/archive/memes.html">челленджи, мемы</a></li>
+        <li><a href="pages/archive/hacks.html">взломы</a></li>
+      </ul>
 
-    <h3>интерактивная зона</h3>
-    <ul>
-      <li><a href="pages/interact/games.html">игры</a></li>
-      <li><a href="pages/interact/tests.html">тесты</a></li>
-    </ul>
-
-    </div> -->
+      <h3>интерактивная зона</h3>
+      <ul>
+        <li><a href="pages/interact/games.html">игры</a></li>
+        <li><a href="pages/interact/tests.html">тесты</a></li>
+      </ul> -->
+    <!-- </div> -->
   </body>
 </html>
