--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>главная</title>
   </head>
   <body>
-    <a href="pages/main.html">о медиа</a>
+    <a href="pages/main.html" target="_blank">о медиа</a>
 
     <div class="zaglushka">
       <div class="text">
