--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>о нас</title>
-</head>
-<body>
-    <a href="../index.html">на главную</a>
-</body>
+  </head>
+  <body>
+    <!-- <a href="../index.html">на главную</a> -->
+    <a href="pages/articles/art1.html">статья 1</a>
+  </body>
 </html>
