--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -3,10 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>о нас</title>
+    <title>о медиа</title>
   </head>
   <body>
     <!-- <a href="../index.html">на главную</a> -->
-    <a href="pages/articles/art1.html">статья 1</a>
+    <a href="pages/articles/art1.html" class="art1">статья 1</a>
+    <div class="main">
+      <div class="main-text">
+        <ul class="main-menu">
+          <li><a href="pages/articles.html">о медиа</a></li>
+          <li><a href="pages/articles.html">статьи</a></li>
+          <li><a href="pages/archive.html">архив</a></li>
+          <li><a href="pages/interact.html">интерактив</a></li>
+          <li><a href="pages/about.html">о нас</a></li>
+        </ul>
+
+        <h1>стэш</h1>
+      </div>
+      <div class="items">
+        <img src="../images/dolphin.svg" alt="dolphin" class="dolphin" />
+      </div>
+      <div class="main-info">
+        <h3>
+          архив старого интернета. место, в&nbsp;котором собраны артефакты
+          прошлого: сайты, культовые моменты, интерфейсы, игры, гифки, мемы
+          и&nbsp;многое другое.&nbsp;мы&nbsp;собираем фрагменты прошлого
+          и&nbsp;создаем из&nbsp;них портал в&nbsp;мир забытого интернета, чтобы
+          вспомнить, какой была сеть до&nbsp;фильтров, алгоритмов
+          и&nbsp;перенасыщения контентом, и&nbsp;чтобы немного заглянуть туда,
+          куда уже не&nbsp;заходят
+        </h3>
+      </div>
+    </div>
   </body>
 </html>
