--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -65,7 +65,7 @@
           class="articles-pl"
         />
 
-        <a href="../pages/articles/art1.html">
+        <a href="../pages/articles/art1.html" class="articles1-link">
           <img
             src="../images/articles1.svg"
             alt="articles1"
