--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -132,7 +132,18 @@
           alt="main-footer"
           class="main-footer"
         />
+        <img
+          src="../images/mobile-footer.png"
+          alt="mobile-footer"
+          class="mobile-footer"
+        />
+        <img
+          src="../images/mobile-footer.svg"
+          alt="mobile-footer"
+          class="mobile-footer"
+        />
       </div>
     </div>
   </body>
+  <!-- <div id="footer"></div> -->
 </html>
