--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -13,11 +13,11 @@
     <div class="main">
       <div class="main-text">
         <ul class="main-menu">
-          <li><a href="pages/articles.html">о медиа</a></li>
-          <li><a href="pages/articles.html">статьи</a></li>
-          <li><a href="pages/archive.html">архив</a></li>
-          <li><a href="pages/interact.html">интерактив</a></li>
-          <li><a href="pages/about.html">о нас</a></li>
+          <li><a href="../index.html">о медиа</a></li>
+          <li><a href="../index.html">статьи</a></li>
+          <li><a href="../index.html">архив</a></li>
+          <li><a href="../index.html">интерактив</a></li>
+          <li><a href="../index.html">о нас</a></li>
         </ul>
 
         <h1>стэш</h1>
