--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,11 +13,11 @@
     <div class="main">
       <div class="main-text">
         <ul class="main-menu">
-          <li><a href="../index.html">о медиа</a></li>
-          <li><a href="../index.html">статьи</a></li>
-          <li><a href="../index.html">архив</a></li>
-          <li><a href="../index.html">интерактив</a></li>
-          <li><a href="../index.html">о нас</a></li>
+          <li><a href="./about.html">о медиа</a></li>
+          <li><a href="./articles.html">статьи</a></li>
+          <li><a href="./archive.html">архив</a></li>
+          <li><a href="./interact.html">интерактив</a></li>
+          <li><a href="./aboutUs.html">о нас</a></li>
         </ul>
 
         <h1>стэш</h1>
