--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>интерактивная зона</title>
-</head>
-<body>
-   <a href="../index.html">на главную</a>
-   <h1>интерактивная зона</h1>
-   <a href="interact/games.html">игры</a>
-   <ul>
-    <li><a href="interact/games/game1.html">игра 1</a></li>
-   </ul>
-   <a href="interact/tests.html">тесты</a>
-   <ul>
-    <li><a href="interact/tests/test1.html">тест 1</a></li>
-   </ul>
-</body>
+  </head>
+  <body>
+    <a href="./about.html">на главную</a>
+    <h1>интерактивная зона</h1>
+  </body>
 </html>
