--- a/src/pages/interact/games/game1.html
+++ b/src/pages/interact/games/game1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>игра 1</title>
-</head>
-<body>
-    <a href="../../../index.html">на главную</a><br>
-    <a href="../../interact.html">к интерактивной зоне</a><br>
+  </head>
+  <body>
+    <a href="../../../index.html">на главную</a><br />
+    <a href="../../interact.html">к интерактивной зоне</a><br />
     <a href="../games.html">к играм</a>
-</body>
+  </body>
 </html>
