--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -59,7 +59,6 @@
       </div>
     </div>
 
-    <!-- Place this script at the end of the body tag -->
     <script>
       var form = document.getElementById('my-form')
 
