--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>статьи</title>
-</head>
-<body>
-  <a href="../index.html">на главную</a>
-  <h1>статьи</h1>
-  <a href="./articles/art1.html">статья 1</a>  <br>
-  <a href="./articles/art2.html">статья 2</a>
-</body>
+  </head>
+  <body>
+    <a href="./about.html">на главную</a>
+    <h1>статьи</h1>
+  </body>
 </html>
