--- a/src/pages/interact/games.html
+++ b/src/pages/interact/games.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>игры</title>
-</head>
-<body>
-    <a href="../../index.html">на главную</a><br>
+  </head>
+  <body>
+    <a href="../../index.html">на главную</a><br />
     <a href="../interact.html">к интерактивной зоне</a>
     <h1>игры</h1>
     <a href="games/game1.html">игра 1</a>
-</body>
+  </body>
 </html>
