--- a/src/pages/archive.html
+++ b/src/pages/archive.html
@@ -8,5 +8,9 @@
   <body>
     <a href="./about.html">на главную</a>
     <h1>архив</h1>
+    <a href="archive/hacks.html">хакс</a>
+    <a href="archive/memes.html">мемы</a>
+    <a href="archive/websites.html">сайты</a>
+    <a href="archive/random.html">рандом</a>
   </body>
 </html>
