--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -8,5 +8,9 @@
   <body>
     <a href="./about.html">на главную</a>
     <h1>статьи</h1>
+    <ul class="art-menu">
+      <li><a href="articles/art1.html">art1</a></li>
+      <li><a href="articles/art2.html">art2</a></li>
+    </ul>
   </body>
 </html>
