--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -8,5 +8,7 @@
   <body>
     <a href="./about.html">на главную</a>
     <h1>интерактивная зона</h1>
+    <a href="interact/games.html">к играм</a>
+    <a href="interact/tests.html">к тестам</a>
   </body>
 </html>
