--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>интерактивная зона</title>
+    <title>о нас</title>
   </head>
   <body>
     <a href="./about.html">на главную</a>
