--- a/src/pages/interact/games.html
+++ b/src/pages/interact/games.html
@@ -6,7 +6,7 @@
     <title>игры</title>
   </head>
   <body>
-    <a href="../../index.html">на главную</a><br />
+    <a href="../about.html">на главную</a><br />
     <a href="../interact.html">к интерактивной зоне</a>
     <h1>игры</h1>
     <a href="games/game1.html">игра 1</a>
