--- a/src/pages/interact/tests.html
+++ b/src/pages/interact/tests.html
@@ -6,7 +6,7 @@
     <title>тесты</title>
   </head>
   <body>
-    <a href="../../index.html">на главную</a><br />
+    <a href="../about.html">на главную</a><br />
     <a href="../interact.html">к интерактивной зоне</a>
     <h1>тесты</h1>
     <a href="tests/test1.html">тест 1</a>
