--- a/src/pages/interact/tests/test1.html
+++ b/src/pages/interact/tests/test1.html
@@ -6,7 +6,7 @@
     <title>тест 1</title>
   </head>
   <body>
-    <a href="../../../index.html">на главную</a><br />
+    <a href="../../about.html">на главную</a><br />
     <a href="../../interact.html">к интерактивной зоне</a><br />
     <a href="../tests.html">к тестам</a>
   </body>
