--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/src/images/favicon.ico" type="image/x-icon" />
 
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/about.html"
+    />
+    <meta property="og:title" content="О медиа" />
+    <meta
+      property="og:description"
+      content="архив старого интернета. место, в котором собраны артефакты прошлого"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_about.webp"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/about.html"
+    />
+    <meta
+      property="twitter:title"
+      content="Погружайся в прошлое вместе со стэшем"
+    />
+    <meta
+      property="twitter:description"
+      content="архив старого интернета. место, в котором собраны артефакты прошлого"
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_about.webp"
+    />
+
     <title>о медиа</title>
   </head>
   <body>
