--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,39 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/src/images/favicon.ico" type="image/x-icon" />
 
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://hseadc.github.io/dikiioguretz/pages/about.html"
-    />
-    <meta property="og:title" content="О медиа" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="архив старого интернета стэш" />
     <meta
       property="og:description"
-      content="архив старого интернета. место, в котором собраны артефакты прошлого"
+      content="место, в котором собраны артефакты прошлого. мы собираем фрагменты прошлого и создаем из них портал в мир забытого интернета, чтобы вспомнить, какой была сеть"
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_about.webp"
+      content="https://metatags.io/images/meta-tags.png"
     />
 
-    <!-- Twitter -->
+    <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://hseadc.github.io/dikiioguretz/pages/about.html"
-    />
-    <meta
-      property="twitter:title"
-      content="Погружайся в прошлое вместе со стэшем"
-    />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
       property="twitter:description"
-      content="архив старого интернета. место, в котором собраны артефакты прошлого"
+      content="место, в котором собраны артефакты прошлого. мы собираем фрагменты прошлого и создаем из них портал в мир забытого интернета, чтобы вспомнить, какой была сеть"
     />
     <meta
       property="twitter:image"
-      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_about.webp"
+      content="https://metatags.io/images/meta-tags.png"
     />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 
     <title>о медиа</title>
   </head>
