--- a/src/pages/archive.html
+++ b/src/pages/archive.html
@@ -3,6 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="архив старого интернета стэш" />
+    <meta
+      property="og:description"
+      content="сохраняем старые артефакты и делимся с вами"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="архив старого интернета стэш" />
+    <meta
+      property="twitter:description"
+      content="сохраняем старые артефакты и делимся с вами"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
     <title>архив</title>
   </head>
   <body>
