--- a/src/pages/archive.html
+++ b/src/pages/archive.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_archive.webp"
     />
 
     <!-- X (Twitter) -->
@@ -26,7 +26,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_archive.webp"
     />
 
     <title>архив</title>
