--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -14,7 +14,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_interact.webp"
     />
 
     <!-- X (Twitter) -->
@@ -27,7 +27,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_interact.webp"
     />
 
     <title>интерактивная зона</title>
