--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -6,7 +6,9 @@
     <title>о нас</title>
   </head>
   <body>
-    <a href="./about.html">на главную</a>
-    <h1>интерактивная зона</h1>
+    <h1>о нас</h1>
+    <nav>
+      <a href="./about.html">на главную</a>
+    </nav>
   </body>
 </html>
