--- a/src/pages/archive.html
+++ b/src/pages/archive.html
@@ -28,15 +28,18 @@
       property="twitter:image"
       content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_archive.webp"
     />
+    <link rel="stylesheets" href="/src/stylesheets/archive.css" />
 
     <title>архив</title>
   </head>
   <body>
-    <a href="./about.html">на главную</a>
     <h1>архив</h1>
-    <a href="archive/hacks.html">хакс</a>
-    <a href="archive/memes.html">мемы</a>
-    <a href="archive/websites.html">сайты</a>
-    <a href="archive/random.html">рандом</a>
+    <nav>
+      <a href="./about.html">на главную</a><br />
+      <a href="archive/hacks.html">хакс</a><br />
+      <a href="archive/memes.html">мемы</a><br />
+      <a href="archive/websites.html">сайты</a><br />
+      <a href="archive/random.html">рандом</a>
+    </nav>
   </body>
 </html>
