--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -33,9 +33,9 @@
     <title>интерактивная зона</title>
   </head>
   <body>
-    <a href="./about.html">на главную</a>
     <h1>интерактивная зона</h1>
-    <a href="interact/games.html">к играм</a>
+    <a href="./about.html">на главную</a><br />
+    <a href="interact/games.html">к играм</a><br />
     <a href="interact/tests.html">к тестам</a>
   </body>
 </html>
