--- a/src/pages/archive.html
+++ b/src/pages/archive.html
@@ -34,9 +34,9 @@
   </head>
   <body>
     <h1>архив</h1>
-    <nav>
+    <nav class="arch">
       <a href="./about.html">на главную</a><br />
-      <a href="archive/hacks.html">хакс</a><br />
+      <a href="archive/hacks.html">взломы</a><br />
       <a href="archive/memes.html">мемы</a><br />
       <a href="archive/websites.html">сайты</a><br />
       <a href="archive/random.html">рандом</a>
