--- a/src/pages/articles.html
+++ b/src/pages/articles.html
@@ -28,15 +28,16 @@
       property="twitter:image"
       content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_articles.webp"
     />
+    <link rel="stylesheets" href="/src/stylesheets/articles.css" />
 
     <title>статьи</title>
   </head>
   <body>
-    <a href="./about.html">на главную</a>
     <h1>статьи</h1>
-    <ul class="art-menu">
-      <li><a href="articles/art1.html">art1</a></li>
-      <li><a href="articles/art2.html">art2</a></li>
-    </ul>
+    <nav class="art-links">
+      <a href="./about.html">на главную</a><br />
+      <a href="articles/art1.html">art1</a><br />
+      <a href="articles/art2.html">art2</a>
+    </nav>
   </body>
 </html>
