--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -29,13 +29,15 @@
       property="twitter:image"
       content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_interact.webp"
     />
-
+    <link rel="stylesheets" href="/src/stylesheets/interact.css" />
     <title>интерактивная зона</title>
   </head>
   <body>
     <h1>интерактивная зона</h1>
-    <a href="./about.html">на главную</a><br />
-    <a href="interact/games.html">к играм</a><br />
-    <a href="interact/tests.html">к тестам</a>
+    <nav class="int-links">
+      <a href="./about.html">на главную</a><br />
+      <a href="interact/games.html">к играм</a><br />
+      <a href="interact/tests.html">к тестам</a>
+    </nav>
   </body>
 </html>
