--- a/src/pages/interact/games/game1.html
+++ b/src/pages/interact/games/game1.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>игра 1</title>
+    <link rel="stylesheets" href="/src/stylesheets/interact.css" />
   </head>
   <body>
-    <a href="../../../index.html">на главную</a><br />
-    <a href="../../interact.html">к интерактивной зоне</a><br />
-    <a href="../games.html">к играм</a>
+    <h1>игра номер один</h1>
+    <nav class="int-links">
+      <a href="../../about.html">на главную</a><br />
+      <a href="../../interact.html">к интерактивной зоне</a><br />
+      <a href="../games.html">к играм</a>
+    </nav>
   </body>
 </html>
