--- a/src/pages/interact/games.html
+++ b/src/pages/interact/games.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>игры</title>
+    <link rel="stylesheets" href="/src/stylesheets/interact.css" />
   </head>
   <body>
-    <a href="../about.html">на главную</a><br />
-    <a href="../interact.html">к интерактивной зоне</a>
     <h1>игры</h1>
-    <a href="games/game1.html">игра 1</a>
+    <nav class="int-links">
+      <a href="../about.html">на главную</a><br />
+      <a href="../interact.html">к интерактивной зоне</a><br />
+      <a href="games/game1.html">игра 1</a>
+    </nav>
   </body>
 </html>
