--- a/src/pages/interact/tests/test1.html
+++ b/src/pages/interact/tests/test1.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>тест 1</title>
+    <link rel="stylesheets" href="/src/stylesheets/interact.css" />
   </head>
   <body>
-    <a href="../../about.html">на главную</a><br />
-    <a href="../../interact.html">к интерактивной зоне</a><br />
-    <a href="../tests.html">к тестам</a>
+    <h1>Тест номер один</h1>
+    <nav class="int-links">
+      <a href="../../about.html">на главную</a><br />
+      <a href="../../interact.html">к интерактивной зоне</a><br />
+      <a href="../tests.html">к тестам</a>
+    </nav>
   </body>
-  <h1>Тест номер один</h1>
 </html>
