--- a/src/pages/archive.html
+++ b/src/pages/archive.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/archive.html" />
     <meta property="og:title" content="архив старого интернета стэш" />
     <meta
       property="og:description"
@@ -18,7 +18,7 @@
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/pages/archive.html" />
     <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
       property="twitter:description"
