--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -7,7 +7,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/about.html" />
     <meta property="og:title" content="архив старого интернета стэш" />
     <meta
       property="og:description"
@@ -15,12 +15,12 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_main.webp"
     />
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/pages/about.html" />
     <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
       property="twitter:description"
@@ -28,14 +28,13 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_main.webp"
     />
 
     <title>о медиа</title>
   </head>
   <body>
     <!-- <a href="../index.html">на главную</a> -->
-    <a href="pages/articles/art1.html" class="art1">статья 1</a>
     <div class="main">
       <div class="main-text">
         <ul class="main-menu">
