--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -6,7 +6,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/interact.html" />
     <meta property="og:title" content="архив старого интернета стэш" />
     <meta
       property="og:description"
@@ -19,7 +19,7 @@
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/pages/interact.html" />
     <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
       property="twitter:description"
