--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./stylesheets/style.css" />
     <link rel="icon" href="/src/images/favicon.ico" type="image/x-icon" />
+    <meta name="title" content="стэш" />
+    <meta
+      name="description"
+      content="архив старого интернета"
+    />
     <title>главная</title>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/index.html" />
+    <meta property="og:title" content="архив старого интернета стэш" />
+    <meta
+      property="og:description"
+      content="место, в котором собраны артефакты прошлого. мы собираем фрагменты прошлого и создаем из них портал в мир забытого интернета, чтобы вспомнить, какой была сеть"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_main.webp"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/index.html" />
+    <meta property="twitter:title" content="архив старого интернета стэш" />
+    <meta
+      property="twitter:description"
+      content="место, в котором собраны артефакты прошлого. мы собираем фрагменты прошлого и создаем из них портал в мир забытого интернета, чтобы вспомнить, какой была сеть"
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_main.webp"
+    />
   </head>
   <body>
     <a href="pages/about.html" target="_blank">о медиа</a>
