--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/src/images/favicon.ico" type="image/x-icon" />
 
+    <meta name="title" content="стэш" />
+    <meta
+      name="description"
+      content="архив старого интернета"
+    />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/about.html" />
