--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -3,6 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="title" content="стэш" />
+    <meta
+      name="description"
+      content="архив старого интернета"
+    />
+
+     <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/aboutUs.html" />
+    <meta property="og:title" content="архив старого интернета стэш" />
+    <meta
+      property="og:description"
+      content="место, в котором собраны артефакты прошлого. мы собираем фрагменты прошлого и создаем из них портал в мир забытого интернета, чтобы вспомнить, какой была сеть"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_main.webp"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/pages/aboutUs.html" />
+    <meta property="twitter:title" content="архив старого интернета стэш" />
+    <meta
+      property="twitter:description"
+      content="место, в котором собраны артефакты прошлого. мы собираем фрагменты прошлого и создаем из них портал в мир забытого интернета, чтобы вспомнить, какой была сеть"
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_main.webp"
+    />
+
     <title>о нас</title>
   </head>
   <body>
