--- a/src/pages/interact.html
+++ b/src/pages/interact.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <meta name="title" content="стэш" />
+    <meta
+      name="description"
+      content="архив старого интернета"
+    />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/interact.html" />
