--- a/src/pages/styleguide.html
+++ b/src/pages/styleguide.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>стайлгайд</title>
 
+    <meta name="title" content="стэш" />
+    <meta
+      name="description"
+      content="архив старого интернета"
+    />
+
      <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/styleguide.html" />
     <meta property="og:title" content="архив старого интернета стэш" />
     <meta
       property="og:description"
-      content="тпрочувствуй эстетику стэша"
+      content="прочувствуй эстетику стэша"
     />
     <meta
       property="og:image"
@@ -24,7 +30,7 @@
     <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
       property="twitter:description"
-      content="почувствуй эстетику стэша"
+      content="прочувствуй эстетику стэша"
     />
     <meta
       property="twitter:image"
