--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -6,14 +6,14 @@
     <link rel="icon" href="/src/images/favicon.ico" type="image/x-icon" />
 
     <meta name="title" content="стэш" />
-    <meta
-      name="description"
-      content="архив старого интернета"
-    />
+    <meta name="description" content="архив старого интернета" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/about.html" />
+    <meta
+      property="og:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/about.html"
+    />
     <meta property="og:title" content="архив старого интернета стэш" />
     <meta
       property="og:description"
@@ -26,7 +26,10 @@
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/pages/about.html" />
+    <meta
+      property="twitter:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/about.html"
+    />
     <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
       property="twitter:description"
@@ -40,11 +43,7 @@
     <title>о медиа</title>
   </head>
   <body>
-<<<<<<< HEAD
     <a href="pages/articles/art1.html" class="art1">статья 1</a>
-=======
-    <!-- <a href="../index.html">на главную</a> -->
->>>>>>> 626b2f1753de1aeff4ac09aea85dc88e90891d90
     <div class="main">
       <div class="main-text">
         <ul class="main-menu">
