--- a/src/pages/styleguide.html
+++ b/src/pages/styleguide.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>стайлгайд</title>
 
     <meta name="title" content="стэш" />
-    <meta
-      name="description"
-      content="архив старого интернета"
-    />
+    <meta name="description" content="архив старого интернета" />
 
-     <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/styleguide.html" />
-    <meta property="og:title" content="архив старого интернета стэш" />
     <meta
-      property="og:description"
-      content="прочувствуй эстетику стэша"
+      property="og:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/styleguide.html"
     />
+    <meta property="og:title" content="архив старого интернета стэш" />
+    <meta property="og:description" content="прочувствуй эстетику стэша" />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_style.webp"
@@ -26,22 +23,21 @@
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/pages/styleguide.html" />
-    <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
-      property="twitter:description"
-      content="прочувствуй эстетику стэша"
+      property="twitter:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/styleguide.html"
     />
+    <meta property="twitter:title" content="архив старого интернета стэш" />
+    <meta property="twitter:description" content="прочувствуй эстетику стэша" />
     <meta
       property="twitter:image"
       content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_style.webp"
     />
-    <link rel="stylesheets" href="/src/stylesheets/styleguide.css" />
-</head>
-<body>
+  </head>
+  <body>
     <h1>стайлгайд</h1>
     <nav class="styleguide-links">
       <a href="./about.html">на главную</a><br />
     </nav>
-</body>
+  </body>
 </html>
