--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -41,6 +41,7 @@
       property="twitter:image"
       content="https://raw.githubusercontent.com/HSEADC/dikiioguretz/refs/heads/main/src/images/cover_style.webp"
     />
+    <title>стайлгайд</title>
   </head>
 
   <body>
@@ -50,47 +51,47 @@
         alt="frame-header"
         class="frame-header"
       />
-      <div class="navigation">
+      <div class="navigation-st">
         <div class="styleguide-nav">
-          <img src="./images/styleguide-nav.webp" alt="about" />
+          <img src="./images/styleguide-nav.webp" alt="about" class="nav-st" />
           <p>о проекте</p>
         </div>
-
-        <div class="styleguide-nav">
+        <!-- <div class="styleguide-nav">
           <img src="./images/styleguide-nav.webp" alt="about" />
           <p>логотип</p>
         </div>
-
         <div class="styleguide-nav">
           <img src="./images/styleguide-nav.webp" alt="about" />
           <p>графика</p>
         </div>
-
         <div class="styleguide-nav">
           <img src="./images/styleguide-nav.webp" alt="about" />
           <p>типографика</p>
         </div>
-
         <div class="styleguide-nav">
           <img src="./images/styleguide-nav.webp" alt="about" />
           <p>изображения</p>
         </div>
-
         <div class="styleguide-nav">
           <img src="./images/styleguide-nav.webp" alt="about" />
           <p>носители</p>
-        </div>
+        </div> -->
       </div>
     </header>
 
+    <img src="./images/frame-left.webp" alt="frame-left" class="frame-left" />
+    <img
+      src="./images/frame-right.webp"
+      alt="frame-right"
+      class="frame-right"
+    />
+
     <section class="screen-1">
       <img src="./images/screen-1.webp" alt="background" class="background-1" />
-
       <div class="note-1">
         <img src="./images/big-note.webp" alt="big-note" />
         <p>СТАЙЛГАЙД</p>
       </div>
-
       <img src="./images/logo-icon.webp" alt="logo" class="big-logo" />
     </section>
 
@@ -99,140 +100,8 @@
       <p>
         архив старого интернета. место, в котором собраны артефакты прошлого:
         сайты, культовые моменты, интерфейсы, игры, гифки, мемы и многое другое.
-        мы собираем фрагменты прошлого и создаем из них портал в мир забытого
-        интернета, чтобы вспомнить, какой была сеть до фильтров, алгоритмов и
-        перенасыщения контентом, и чтобы немного заглянуть туда, куда уже не
-        заходят.
+        мы собираем фрагменты прошлого и создаем из них
       </p>
-
-      <h3>Миссия</h3>
-      <p>
-        сохранить и показать цифровое наследие старого интернета пока оно не
-        пропало безвозвратно
-      </p>
-    </section>
-
-    <section class="screeen-3">
-      <h3>ЛОГОТИП</h3>
-      <p>
-        название «стэш» исходит от английского слова stash, что отражает идею
-        хранения и накопления цифровых находок — это место, где собираются
-        фрагменты старого интернета, воспоминания и визуальные артефакты эпохи.
-        само слово ассоциируется с личным тайником, чем-то спрятанным, что
-        хочется сохранить и пересматривать.
-      </p>
-
-      <img
-        src="./images/logo-styleguide.webp"
-        alt="logo"
-        class="styleguide-logo"
-      />
-
-      <p>
-        логотип в виде дельфина выбран неслучайно, поскольку дельфины часто
-        появлялись в визуальной культуре старого интернета и стали её
-        неформальным символом. они олицетворяют дружелюбие, игру и связь между
-        природой и технологиями, что было характерно для оптимистичного
-        цифрового мышления 2000-х.
-      </p>
-
-      <h3>ВАРИАЦИИ ЛОГОТИПА</h3>
-
-      <img
-        src="./images/logos-styleguide.webp"
-        alt="logos"
-        class="styleguide-logos"
-      />
-    </section>
-
-    <section class="screen-3">
-      <h3>ГРАФИКА</h3>
-      <p>
-        в проекте визуальный код намеренно отходит от привычных стандартов
-        современного веба и обращается к визуальному языку старых сайтов,
-        созданных в эпоху, когда ещё не существовало строгих правил и
-        универсальных шаблонов.
-      </p>
-
-      <h3>ЦВЕТА</h3>
-      <img src="./images/colors-styleguide.webp" alt="colors" />
-
-      <p>
-        важную роль играют детали, вдохновлённые компьютерным столом: иконки,
-        окна, кнопки и визуальные отсылки к старым операционным системам. эти
-        элементы создают ощущение цифрового пространства, в котором можно
-        «побродить» и случайно наткнуться на находку.
-      </p>
-
-      <img
-        src="./images/icons-styleguide.webp"
-        alt="icons"
-        class="styleguide-icons"
-      />
-
-      <h3>ПЛАШКИ</h3>
-      <img
-        src="./images/stickers-styleguide.webp"
-        alt="plashki"
-        class="styleguide-plashki"
-      />
-
-      <h3>ЭЛЕМЕНТЫ</h3>
-      <img
-        src="./images/elements-styleguide.webp"
-        alt="elements"
-        class="styleguide-elements"
-      />
-
-      <h3>ЭЛЕМЕНТЫ В СТИЛЕ ЛОУПОЛИ</h3>
-      <img
-        src="./images/lowpoly-styleguide.webp"
-        alt="lowpoly"
-        class="styleguide-lowpoly"
-      />
-    </section>
-
-    <section class="screen-4">
-      <h3>ТИПОГРАФИКА</h3>
-      <img
-        src="./images/typo-styleguide.webp"
-        alt="typo"
-        class="styleguide-typo"
-      />
-    </section>
-
-    <section class="screen-5">
-      <h3>ИЗОБРАЖЕНИЯ</h3>
-      <p>
-        изображения для сайтов, мемов, статей и других артефактов вносятся без
-        обработки и дополнительных эффектов, чтобы сохранить дух свободы и
-        простоты. фотографии помещаются в специальные плашки в стиле объемных
-        иконок Windows xp.
-      </p>
-      <img
-        src="./images/images-styleguide.webp"
-        alt="images"
-        class="styleguide-images"
-      />
-
-      <p>
-        часть фоновых изображений является старыми обоями прошлых версий
-        Windows, а другая часть берет свои корни из эстетики Frutiger Aero для
-        поддержания атмосферы старого веба.
-      </p>
-
-      <img
-        src="./images/backgrounds-styleguide.webp"
-        alt="backgrounds"
-        class="styleguide-backgrounds"
-      />
-
-      <h3>НОСИТЕЛИ</h3>
-      <img
-        src="./images/merch-styleguide.webp"
-        alt="merch"
-        class="styleguide-merch"
-      />
     </section>
   </body>
 </html>
