--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -45,63 +45,21 @@
   </head>
 
   <body>
-    <header>
-      <img
-        src="./images/frame-header.webp"
-        alt="frame-header"
-        class="frame-header"
-      />
-      <div class="navigation-st">
-        <div class="styleguide-nav">
-          <img src="./images/styleguide-nav.webp" alt="about" class="nav-st" />
-          <p>о проекте</p>
-        </div>
-        <!-- <div class="styleguide-nav">
-          <img src="./images/styleguide-nav.webp" alt="about" />
-          <p>логотип</p>
-        </div>
-        <div class="styleguide-nav">
-          <img src="./images/styleguide-nav.webp" alt="about" />
-          <p>графика</p>
-        </div>
-        <div class="styleguide-nav">
-          <img src="./images/styleguide-nav.webp" alt="about" />
-          <p>типографика</p>
-        </div>
-        <div class="styleguide-nav">
-          <img src="./images/styleguide-nav.webp" alt="about" />
-          <p>изображения</p>
-        </div>
-        <div class="styleguide-nav">
-          <img src="./images/styleguide-nav.webp" alt="about" />
-          <p>носители</p>
-        </div> -->
-      </div>
-    </header>
-
-    <img src="./images/frame-left.webp" alt="frame-left" class="frame-left" />
-    <img
-      src="./images/frame-right.webp"
-      alt="frame-right"
-      class="frame-right"
-    />
-
-    <section class="screen-1">
-      <img src="./images/screen-1.webp" alt="background" class="background-1" />
-      <div class="note-1">
-        <img src="./images/big-note.webp" alt="big-note" />
+    <header></header>
+    <main>
+      <section class="screen-1">
         <p>СТАЙЛГАЙД</p>
-      </div>
-      <img src="./images/logo-icon.webp" alt="logo" class="big-logo" />
-    </section>
+      </section>
 
-    <section class="screen-2">
-      <h3>О ПРОЕКТЕ</h3>
-      <p>
-        архив старого интернета. место, в котором собраны артефакты прошлого:
-        сайты, культовые моменты, интерфейсы, игры, гифки, мемы и многое другое.
-        мы собираем фрагменты прошлого и создаем из них
-      </p>
-    </section>
+      <section class="screen-2">
+        <h3>О ПРОЕКТЕ</h3>
+        <p>
+          архив старого интернета. место, в котором собраны артефакты прошлого:
+          сайты, культовые моменты, интерфейсы, игры, гифки, мемы и многое
+          другое. мы собираем фрагменты прошлого и создаем из них
+        </p>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
