--- a/src/pages/aboutUs.html
+++ b/src/pages/aboutUs.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="title" content="стэш" />
-    <meta
-      name="description"
-      content="архив старого интернета"
-    />
+    <meta name="description" content="архив старого интернета" />
 
-     <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hseadc.github.io/dikiioguretz/pages/aboutUs.html" />
+    <meta
+      property="og:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/aboutUs.html"
+    />
     <meta property="og:title" content="архив старого интернета стэш" />
     <meta
       property="og:description"
@@ -25,7 +25,10 @@
 
     <!-- X (Twitter) -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://hseadc.github.io/dikiioguretz/pages/aboutUs.html" />
+    <meta
+      property="twitter:url"
+      content="https://hseadc.github.io/dikiioguretz/pages/aboutUs.html"
+    />
     <meta property="twitter:title" content="архив старого интернета стэш" />
     <meta
       property="twitter:description"
@@ -39,9 +42,86 @@
     <title>о нас</title>
   </head>
   <body>
-    <h1>о нас</h1>
-    <nav>
-      <a href="./about.html">на главную</a>
-    </nav>
+    <header>
+      <nav>
+        <a href="../index.html">на главную</a>
+        <a href="about.html">о медиа</a>
+        <a href="aboutUs.html">о нас</a>
+        <a href="articles.html">статьи</a>
+        <a href="archive.html">архив</a>
+        <a href="interact.html">интерактив</a>
+      </nav>
+    </header>
+    <main>
+      <h1>о нас</h1>
+    </main>
+    <footer>
+      <div class="socials-icons">
+        <a href="https://vk.com/archive_stash?from=groups" target="_blank">
+          <img src="../images/vk-icon.webp" alt="vk" class="vk" width="100px" />
+        </a>
+        <a
+          href="https://www.instagram.com/stash_archive?igsh=MWlscWVjcTEzano5Mw=="
+          target="_blank"
+        >
+          <img
+            src="../images/inst-icon.webp"
+            alt="inst"
+            class="inst"
+            width="100px"
+          />
+        </a>
+        <a href="https://t.me/oldweb_core" target="_blank">
+          <img
+            src="../images/tg-icon.webp"
+            alt="tgg"
+            class="tgg"
+            width="100px"
+          />
+        </a>
+      </div>
+      <form id="my-form" action="https://formspree.io/f/mldpkdbz" method="POST">
+        <input type="text" name="message" placeholder="tg user" />
+        <button id="my-form-button">отправить</button>
+        <p id="my-form-status"></p>
+      </form>
+    </footer>
+    <script>
+      var form = document.getElementById('my-form')
+
+      async function handleSubmit(event) {
+        event.preventDefault()
+        var status = document.getElementById('my-form-status')
+        var data = new FormData(event.target)
+        fetch(event.target.action, {
+          method: form.method,
+          body: data,
+          headers: {
+            Accept: 'application/json'
+          }
+        })
+          .then((response) => {
+            if (response.ok) {
+              status.innerHTML = 'спасибо, оставайтесь с нами=)'
+              form.reset()
+            } else {
+              response.json().then((data) => {
+                if (Object.hasOwn(data, 'errors')) {
+                  status.innerHTML = data['errors']
+                    .map((error) => error['message'])
+                    .join(', ')
+                } else {
+                  status.innerHTML =
+                    'Упс.. Что-то пошло не так. Попробуйте еще раз=)'
+                }
+              })
+            }
+          })
+          .catch((error) => {
+            status.innerHTML = 'Упс.. Что-то пошло не так. Попробуйте еще раз=)'
+          })
+      }
+      form.addEventListener('submit', handleSubmit)
+    </script>
   </body>
 </html>
