--- a/src/pages/interact/tests/test1.html
+++ b/src/pages/interact/tests/test1.html
@@ -79,9 +79,7 @@
         </nav> -->
       </main>
     </article>
-
-    <footer>
-          <footer>
+          <!-- <footer>
       <div class="socials-icons">
         <a href="https://vk.com/archive_stash?from=groups" target="_blank">
           <img
@@ -117,7 +115,7 @@
         <button id="my-form-button">отправить</button>
         <p id="my-form-status"></p>
       </form>
-    </footer>
+    </footer> -->
         </div>
 
     <script>
